buildscript {

    repositories {
        mavenCentral()
    }
    dependencies {

    }
}

allprojects {
    group 'com.austral.ingsis'

}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = 14
    targetCompatibility = 14

    repositories {
        mavenCentral()
    }
    dependencies {
        compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
        compile group: 'junit', name: 'junit', version: '4.13'

    }
    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += "--enable-preview"
    }

}

project(':token') {

}

project(':statement') {

}

project(':interpreter') {
    dependencies {
        compile project(':statement')
        testCompile project(':parser')
        testCompile project(':lexer')
    }

}

project(':lexer') {
    dependencies {
        compile project(':token')
    }


}

project(':parser') {
    dependencies {
        compile project(':token')
        compile project(':statement')
        testCompile project(':lexer')
    }

}

project(':cli') {
    compileJava {
        options.compilerArgs += ['--enable-preview']
    }

    dependencies {
        compile project(':lexer')
        compile project(':parser')
        compile project(':interpreter')
        compile 'info.picocli:picocli:4.3.2'
        annotationProcessor 'info.picocli:picocli-codegen:4.3.2'
    }

    jar {
        manifest {
            attributes(
                    'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                    'Main-Class': 'com.austral.ingsis.Main'
            )
        }
        from {
            configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
        }

    }
}

